multiple whitespaces in rtu/trace titles in tree fixed for html (web client)

--- a/Client/WebClient/src/app/components/ft-rtu-tree/ft-rtu-line/ft-rtu-children/ft-detached-line/ft-detached-line.component.scss
+++ b/Client/WebClient/src/app/components/ft-rtu-tree/ft-rtu-line/ft-rtu-children/ft-detached-line/ft-detached-line.component.scss
@@ -24,3 +24,7 @@ p {
 div:hover {
   background-color: rgba(0, 0, 0, 0.03);
 }
+
+.preserve-ws {
+  white-space: pre;
+}
