--- a/Client/WebClient/src/app/components/ft-rtu-tree/ft-rtu-line/ft-rtu-line.component.css
+++ b/Client/WebClient/src/app/components/ft-rtu-tree/ft-rtu-line/ft-rtu-line.component.css
@@ -32,3 +32,7 @@ p {
 .children-container {
   margin-left: 90px;
 }
+
+.preserve-ws {
+  white-space: pre;
+}
